cmake_minimum_required (VERSION 3.8)
project ("effects")
include(CMake/PlatformConfig.cmake)
include(CMake/DependentConfig.cmake)
include(Source/Sources.cmake)
add_executable (effects ${EFFECTS_SRC})
target_link_libraries(effects ${DependentLibs})
add_library(libglad STATIC ${GLAD_ROOT}/src/glad.c)
target_link_libraries(effects libglad)

include(CMake/InstallConfig.cmake)